align parameters list if possible, fixes #70

--- a/sass/_theme_rst.sass
+++ b/sass/_theme_rst.sass
@@ -167,6 +167,7 @@
     border: none
     td
       border: none
+      padding-top: 5px
     .field-name
       padding-right: 10px
       text-align: left
